Noteworthy changes in version 2.4.8 (unreleased)
------------------------------------------------

  Release-info: https://dev.gnupg.org/T7428


Noteworthy changes in version 2.4.7 (2024-11-25)
------------------------------------------------

  * gpg: Allow the use of an ADSK subkey as ADSK subkey.  [T6882]

  * gpg: Avoid a failure exit code for expired ultimately trusted
    keys.  [T7351]

  * gpg: Fix comparing ed448 to ed25519 with --assert-pubkey-algo.
    [T7425]

  * gpg: Retain binary representation for import->export with Ed25519
    key signatures.  [T7426]

  * gpgsm: Improvement for some rare P12 files.  [rG5f9975abf5]

  * scd: More mitigations against lock ups with multiple cards or
    apps.  [T7323, T7402]

  * gpgtar: Fix directory creation during extraction.  [T7380]

  * gpg-mail-tube: Minor fixes.

  * gpgconf: Add list flag to trusted-key et al.  [T7313]

  * Fix a build problem on macOS (missing unistd.h).  [T7193]


  Release-info: https://dev.gnupg.org/T7353


Noteworthy changes in version 2.4.6 (2024-10-29)
------------------------------------------------

  * gpg: New command --quick-set-ownertrust.  [rG967678d972]

  * gpg: Indicate disabled keys in key listings and add list option
    "show-ownertrust".  [rG2a0a706eb2]

  * gpg: Make sure a DECRYPTION_OKAY is never issued for a bad OCB
    tag.  [T7042]

  * gpg: Do not allow to accidently set the RENC usage.  [T7072]

  * gpg: Accept armored files without CRC24 checksum.  [T7071]

  * gpg: New --import-option "only-pubkeys".  [T7146]

  * gpg: Repurpose the AKL mechanism "ldap" to work like the keyserver
    mechnism but only for LDAP keyservers.  [rG6551281ca3]

  * gpg: ADSKs are now configurable for new keys.  [T6882]

  * gpg: New option --proc-all-sigs.  [T7261]

  * gpg: Fix a wrong decryption failed status for signed and OCB
    encrypted messages without a signature verification key.  [T7042]

  * gpg: Make --no-literal work again for -c and --store.  [T5852]
